Replace API keys with placeholder text

--- a/delphi-ai_multi_llm_model.ipynb
+++ b/delphi-ai_multi_llm_model.ipynb
@@ -59,8 +59,8 @@
     {
       "cell_type": "code",
       "source": [
-        "os.environ[\"CEREBRAS_API_KEY\"] = \"csk-4tm2v9tm8rcn499jdpcnmrynrt69r8hyfpt8nr9w52dpk8f9\"\n",
-        "os.environ[\"DEEPSEEK_API_KEY\"] = \"sk-af880d796c074ee9853bf9957798a46d\"\n",
+        "os.environ[\"CEREBRAS_API_KEY\"] = \"Your API Key here\"\n",
+        "os.environ[\"DEEPSEEK_API_KEY\"] = \"Your API Key here\"\n",
         "\n",
         "client = Cerebras(api_key=os.environ[\"CEREBRAS_API_KEY\"])"
       ],
